.planning/codebase/construct_variables_errors_analysis.txt
src\f1d\text\construct_variables.py:910: error: Value of type "Collection[str]"
is not indexable  [index]
        stats["input"]["files"].append(str(keywords_path))
        ^~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:911: error: Value of type "Collection[str]"
is not indexable  [index]
        stats["input"]["checksums"]["managerial_roles_extracted.txt"] = (
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:914: error: Value of type "Collection[str]"
is not indexable  [index]
        stats["input"]["files"].append(str(manifest_path))
        ^~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:915: error: Value of type "Collection[str]"
is not indexable  [index]
        stats["input"]["checksums"]["master_sample_manifest.parquet"] = (
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:921: error: Unsupported target for indexed
assignment ("Collection[str]")  [index]
        stats["input"]["total_rows"] = len(manifest_df)
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:922: error: Unsupported target for indexed
assignment ("Collection[str]")  [index]
        stats["input"]["total_columns"] = len(manifest_df.columns)
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:932: error: Value of type "Collection[str]"
is not indexable  [index]
            f"  Input stats collected: {stats['constructvariables_input'][...
                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~...
src\f1d\text\construct_variables.py:949: error: Value of type "Collection[str]"
is not indexable  [index]
                stats["output"]["files"].append(f"linguistic_variables_{ye...
                ^~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:958: error: Unsupported target for indexed
assignment ("Collection[str]")  [index]
        stats["output"]["final_rows"] = output_rows
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:959: error: Unsupported target for indexed
assignment ("Collection[str]")  [index]
        stats["output"]["final_columns"] = output_cols
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:963: error: Unsupported target for indexed
assignment ("Collection[str]")  [index]
        stats["timing"]["end_iso"] = datetime.now().isoformat()
        ^~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:964: error: Unsupported target for indexed
assignment ("Collection[str]")  [index]
        stats["timing"]["duration_seconds"] = round(end_time - start_time,...
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:973: error: Value of type "Collection[str]"
is not indexable  [index]
            stats["timing"]["duration_seconds"],
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:992: error: Value of type "Collection[str]"
is not indexable  [index]
        duration_seconds = stats["timing"]["duration_seconds"]
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:993: error: Value of type "Collection[str]"
is not indexable  [index]
        throughput = calculate_throughput(stats["output"]["final_rows"], d...
                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:996: error: Value of type "Collection[str]"
is not indexable  [index]
            "total_rows": stats["output"]["final_rows"],
                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:1001: error: Unsupported target for indexed
assignment ("Collection[str]")  [index]
        stats["output"]["checksums"] = {}
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:1005: error: Value of type
"Collection[str]" is not indexable  [index]
            stats["output"]["checksums"][filepath.name] = checksum
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\f1d\text\construct_variables.py:1041: error: "Collection[str]" has no
attribute "get"  [attr-defined]
                stats.get("constructvariables_input", {})
                ^
